# whisperX

./: pyproject.toml
.scripts/: is.sh  run.sh
.trunk/: trunk.yaml
