[tool.poetry]
name = "whisperx"
version = "0.1.0"
description = ""
authors = ["Földházi István <Istvan.Foldhazi@idomsoft.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.7"
torch = ">=2"
torchaudio = ">=2"
faster-whisper = "1.0.2"
transformers = "4.40.2"
pandas = "^2.2.2"
setuptools = ">=65"
nltk = "^3.8.1"
pytorch-lightning = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
whisperx = "whisperx.transcribe:cli"